--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,3 @@
-name: CI Pipeline
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  lint:
-    name: Lint Code
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-
-      - name: Install Linting Tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install pylint black
-
-      - name: Run Black
-        run: black --check app/
-
-      - name: Run Pylint
-        run: |
-          pylint $(find app/ -name "*.py" -o -name "*.py")
-
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
@@ -44,7 +9,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.11"
+
+      - name: Install Application Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Install Testing Tools
         run: |
