--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.11"
 
       - name: Install Linting Tools
         run: |
           python -m pip install --upgrade pip
-          pip install pylint black
+          pip install -r requirements.txt
 
       - name: Run Black
         run: black --check summarizer/
