--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,13 +51,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Install Testing Tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-
       - name: Run Tests with Coverage
-        run: pytest --cov=app --cov-report=xml tests/
+        run: |
+        coverage run --source=summarizer -m pytest tests/
+        coverage xml
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v5.1.1
